crates/cli/tests/snapshots/deprecated_to_path__fix_4ad28e2610d2aecf06f3f7ded4bbe61c7cb94bf01d2fd066ba65157b55964386.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"toPath (if cond then \\\"/abs\\\" else \\\"rel\\\")\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-toPath (if cond then "/abs" else "rel")
+let __strictix_to_path_arg = builtins.toString (if cond then "/abs" else "rel"); in if builtins.substring 0 1 __strictix_to_path_arg == "/" then /. + __strictix_to_path_arg else ./. + "/${__strictix_to_path_arg}"
