crates/cli/tests/snapshots/deprecated_to_path__fix_4f2c5321b7dbd2171c77729c879745a1f6209972b4a9d367bd5fb41a83c42e99.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"toPath x\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-toPath x
+let __strictix_to_path_arg = builtins.toString x; in if builtins.substring 0 1 __strictix_to_path_arg == "/" then /. + __strictix_to_path_arg else ./. + "/${__strictix_to_path_arg}"
