crates/cli/tests/snapshots/deprecated_to_path__fix_57324a297768ed579b7a540615d41f4b350018feb6bc79a1e783c6a91958dfc6.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"toPath __strictix_to_path_arg\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-toPath __strictix_to_path_arg
+let __strictix_to_path_arg_ = builtins.toString __strictix_to_path_arg; in if builtins.substring 0 1 __strictix_to_path_arg_ == "/" then /. + __strictix_to_path_arg_ else ./. + "/${__strictix_to_path_arg_}"
