crates/cli/tests/snapshots/deprecated_to_path__fix_babcf3ca5fe7ee69b692a0e6ccfbfdf4f08823229d054ee85af87dc3d52d41ea.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"toPath \\\"/abc/def\\\"\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-toPath "/abc/def"
+/. + "/abc/def"
