crates/cli/tests/snapshots/deprecated_to_path__lint_174dc0d1d9e78fd30b854475b82a991795814e0bfc6a3fc90f46e7370f2f63dc.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"builtins.toPath \\\"/some/path\\\"\""
---
[W17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ builtins.toPath "/some/path"
   · ──────────────┬─────────────  
   ·               ╰─────────────── builtins.toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
