crates/cli/tests/snapshots/deprecated_to_path__lint_57324a297768ed579b7a540615d41f4b350018feb6bc79a1e783c6a91958dfc6.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"toPath __strictix_to_path_arg\""
---
[17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ toPath __strictix_to_path_arg
   │ ──────────────┬──────────────  
   │               ╰──────────────── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
