crates/cli/tests/snapshots/deprecated_to_path__lint_babcf3ca5fe7ee69b692a0e6ccfbfdf4f08823229d054ee85af87dc3d52d41ea.snap
---
source: crates/cli/tests/deprecated_to_path.rs
expression: "\"toPath \\\"/abc/def\\\"\""
---
[17] Warning: Found usage of deprecated builtin toPath
   ╭─[<temp_file_path>:1:1]
   │
 1 │ toPath "/abc/def"
   · ────────┬────────  
   ·         ╰────────── toPath is deprecated, see :doc builtins.toPath within the REPL for more
───╯
